# XYModelTexturePath-Tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
