[package]
name = "xy_model_texture_path"
version = "0.1.0"
description = "快速修改模型贴图路径"
authors = ["XY"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
walkdir = "2"
